# -HCMUS-DPTTT

./: README.md  arxiv_mcp_server.py  pyproject.toml
XGBoost/: main.tex  references.bib
XGBoost/sections/: 01_intro.tex  02_decision_tree.tex  03_ensemble_learning.tex  04_gradient_boosting.tex  05_xgboost_overview.tex  06_math_formular_xgboost.tex  07_exact_greedy_split.tex  08_column_block.tex  09_approximate_split_finding.tex  10_weighted_quantile_sketch.tex  11_sparsity_aware_split_finding.tex  12_comparition.tex  13_code_demonstration.tex  14_conclusion.tex
benchmarks/: split_finding_benchmark.py
benchmarks/results/: split_finding_benchmark.csv  split_finding_runtime_table.tex
src/dpt_xgboost_baseline/: __init__.py  approximate.py  column_block.py  exact_greedy.py  sparsity_aware.py
tests/: test_approximate.py  test_column_block.py  test_exact_greedy.py  test_sparsity_aware.py
