[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "dpt-xgboost-baseline"
version = "0.1.0"
description = "Baseline implementation of XGBoost exact greedy split finding."
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
test = ["pytest>=9.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
